1.5.3	* fixed bug in pR2 when missing data is present

1.5.2	* fixed bugs in calls to C routines in ideal.R

1.5.1	* AustralianElections includes 2010,2013,2016
	* presidentialElections includes 2016 and 2012 Alabama result
	* Manual updated to reflect changes

1.5.0	* improved truncated normal sampling (15-20% faster)
	* added use.voter option to ideal, implementing approach from
	  Stephen Jessee's 2016 AJPS article. See ?ideal for details.
	* updated author contact information
	* fixed voteview URLs to reflect new site structure
	* fixed other broken URLs
	* CRAN compliance

1.4.9	* fixed bug in AIC correct in Vuong test

1.4.8	* package dependencies handled better
	* slight tweeks to ideal help
	* CRAN compliance
	* addressing memory leak issues revealed by valgrind in ideal's
	  mallocs

1.4.7	* AIC and BIC in Vuong, better description and printing

1.4.6	* compliance with CRAN recss/reqs, vignettes sub-dir
	* better Imports/Depends/Suggests etc
	* dropped redundant "require" in examples etc
	* fixed long-standing buglet in Vuong test, AIC type df adjustment
	  to test statistic
	* use format.pval for pvalues printing in Vuong output to screen

1.4.5	* better compliance with CRAN reccs/reqs, R 3.0.0 etc
	* drop leading zero in version number
	* compress PDFs from vignettes
	* lazy-loading, so um, lazy-load in readKH.r

1.04.4	* presidentialElections includes 2012

1.04.3	* bug in postProcess, not evaluating args in call of ideal object

1.04.2	* minor typo in dropRollCall.Rd

1.04.1	* fixed bug in non-English locales for hurdle/zeroinfl formula
	  processing if second part of formula contained a period.

1.04	* fixed quite serious bug with storing item parameters
	* COPYING file deprecated (?), deleted from repos with r174

1.03.12	* minor bug in tracex with d>1
	* deprecate showAll plotting option in tracex, change to "multi"
	  (default=FALSE)

1.03.11	* small change to documentation for ca2006 (thanks Arthur Aguirre)
